--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,3 @@
-spring.datasource.url=${FFF_JDBC_URL:jdbc:mysql://localhost:3306/fff}
+spring.datasource.url=${FFF_JDBC_URL:postgres://nagpbupe:DPmkwfNE-XkVDS6ESrQBA-CBDtbmvS0m@cornelius.db.elephantsql.com/nagpbupe}
 spring.datasource.username=${FFFUSER:nagpbupe}
-spring.datasource.password=${FFFPASS:KevinSofka2023}
+spring.datasource.password=${FFFPASS:DPmkwfNE-XkVDS6ESrQBA-CBDtbmvS0m}
