Dorobenie properties a štelovanie dependency

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,4 @@
-spring.datasource.url=${FFF_JDBC_URL:jdbc:postgres://cornelius.db.elephantsql.com/nagpbupe}
-spring.datasource.username=${FFFUSER:nagpbupe}
-spring.datasource.password=${FFFPASS:DPmkwfNE-XkVDS6ESrQBA-CBDtbmvS0m}
+spring.datasource.url=${FFF_CP:jdbc:postgresql://cornelius.db.elephantsql.com:5432/nagpbupe}
+spring.datasource.username=${FFF_User:nagpbupe}
+spring.datasource.password=${FFF_Pass:DPmkwfNE-XkVDS6ESrQBA-CBDtbmvS0m}
+server.port=${FFF_PORT:5432}
